--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_name">Twitter Client</string>
     <string name="action_new">New</string>
     <string name="action_refresh">Refresh</string>
+    <string name="action_profile">Profile</string>
     <string name="action_settings">Settings</string>
     <string name="button_cancel">Cancel</string>
     <string name="button_tweet">Tweet</string>
@@ -12,7 +13,8 @@
     <string name="title_activity_photos">Flickr Photos</string>
     <string name="title_activity_timeline">TimelineActivity</string>
     <string name="title_activity_new_tweet">Compose Tweet</string>
-	<string name="hint_new_tweet">What\'s happening?</string>
+    <string name="hint_new_tweet">What\'s happening?</string>
     <string name="error_field_required">This field is required</string>
-    
+    <string name="title_activity_profile">ProfileActivity</string>
+
 </resources>
